openshift/projects/website-bluefreedom/oc-new-app-blue.yaml
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: blue
  name: blue
spec:
  replicas: 1
  selector:
    app: blue
    deploymentconfig: blue
  strategy:
    resources: {}
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      labels:
        app: blue
        deploymentconfig: blue
    spec:
      volumes:
      - name: www-volume
        persistentVolumeClaim:
          claimName: blue-claim
      containers:
      - image: 172.30.1.1:5000/myproject/blue:latest
        name: blue
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - name: www-volume
            mountPath: /var/www/html
        resources: {}
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - blue
      from:
        kind: ImageStreamTag
        name: blue:latest
        namespace: myproject
    type: ImageChange
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: blue
  name: blue
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blue
    deploymentconfig: blue
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Route
metadata:
  name: blue
  namespace: myproject
spec:
  host: blue-myproject.192.168.99.100.xip.io
  to:
    kind: Service
    name: blue
  port:
    targetPort: 80-tcp
  wildcardPolicy: None
